# ChangeLog for dev-libs/libusb
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libusb/ChangeLog,v 1.158 2014/03/14 10:03:18 ago Exp $

  14 Mar 2014; Agostino Sarubbo <ago@gentoo.org> libusb-1.0.18.ebuild:
  Stable for ppc64, wrt bug #503404

  12 Mar 2014; Agostino Sarubbo <ago@gentoo.org> libusb-1.0.18.ebuild:
  Stable for sparc, wrt bug #503404

  09 Mar 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> libusb-1.0.18.ebuild:
  x86 stable wrt bug #503404

  09 Mar 2014; Markus Meier <maekke@gentoo.org> libusb-1.0.18.ebuild:
  arm stable, bug #503404

  07 Mar 2014; Pacho Ramos <pacho@gentoo.org> libusb-1.0.18.ebuild:
  amd64 stable, bug #503404

  05 Mar 2014; Jeroen Roovers <jer@gentoo.org> libusb-1.0.18.ebuild:
  Stable for HPPA (bug #503404).

*libusb-1.0.18 (31 Jan 2014)

  31 Jan 2014; Samuli Suominen <ssuominen@gentoo.org> +libusb-1.0.18.ebuild:
  Version bump.

  08 Aug 2013; Samuli Suominen <ssuominen@gentoo.org> libusb-1.0.9-r2.ebuild:
  Block revision of emul-linux-x86-baselibs that dropped the colliding files.

*libusb-1.0.9-r2 (07 Aug 2013)

  07 Aug 2013; Samuli Suominen <ssuominen@gentoo.org> +libusb-1.0.9-r2.ebuild:
  Conversion to multilib-minimal.eclass.

  01 Aug 2013; Samuli Suominen <ssuominen@gentoo.org> -files/0.1.12-fbsd.patch,
  -files/libusb-0.1-ansi.patch, -files/libusb-0.1.12-no-infinite-bulk.patch,
  -files/libusb-0.1.12-nocpp.patch, -libusb-0.1.12-r7.ebuild:
  old

*libusb-1.0.9-r1 (01 Aug 2013)

  01 Aug 2013; Samuli Suominen <ssuominen@gentoo.org> +libusb-1.0.9-r1.ebuild:
  Move the shared library to / for hid2hci binary from net-wireless/bluez wrt
  #478878 by Alexis Ballier

  05 Jun 2013; Samuli Suominen <ssuominen@gentoo.org> metadata.xml:
  Peter Stuge from libusb upstream is sharing ebuild maintenance by his own
  request.

  18 Nov 2012; Robin H. Johnson <robbat2@gentoo.org> metadata.xml:
  Drop duplication of myself as a maintainer where there is a herd.
