@@ -5,24 +5,18 @@ DIST libusb-1.0.18.tar.bz2 502160 SHA256 c73f5cec45a5de94418da4e151b723295857192
 DIST libusb-1.0.9.tar.bz2 421971 SHA256 e920eedc2d06b09606611c99ec7304413c6784cba6e33928e78243d323195f9b SHA512 5eba3e9df2c1db71d685becebebf5b1310ee87e442f97a2553a430fd11655a2d9ce50e4ec2ffd62fe322286b0d6bc9e142ce552effc2466ee50424deba035ee5 WHIRLPOOL 9886cb6660d4530fe199441a8b5b76cb8a00012d69a13a40276bf3b880561eeb31301c186828b6fd08b687e038fac640475ba280473053e252cf23f15ca38372
 EBUILD libusb-1.0.18.ebuild 1762 SHA256 be4bf84f4555091af7cf63ee9042cd0b40f1b82406b783e9e58153fbd44d0961 SHA512 33de01721c1cba9db867a9aa83b757d66b73f21cd3d2552656040f229fce20046f0002bc39b9ed348be918ff34fcdf022269cae8e27990e5355033bbe9777f09 WHIRLPOOL dcf1a92af50e1314c0f093ae64bd9782512379c44c484057f93d6c4290bebe442fc04cfb6d27838c0ac206af8da0c39af5d1e56ea4510d9042cafb40ef95e6c2
 EBUILD libusb-1.0.9-r1.ebuild 1070 SHA256 7380a11d1598cf24e7f97520982a93d87c9b68b9597a9054ab972921927945f3 SHA512 e44f356a65973c7ee7c18bce4b9fdc9887e717eedc9f2050ac0bd823fb3fb939ca6117186032aa1458ff0b3da0ed3680e8ff1e126d11b37127e5ed3026953544 WHIRLPOOL e082cf6f9ef0f9f3f0a68d73f1b261ed2d8c338e10ddb9c800b65eed6e582f60949e6137ad83818415d11b25d173a241a15acae90a5f01acb5a961896890e33c
-EBUILD libusb-1.0.9-r2.ebuild 1416 SHA256 0d3a9600fec29b599295d0efd5f96f22b1ea3e3aa5a94e62cfb43447b4470dc6 SHA512 a4ab5c7fe2b9fee8c14c0f0c7b7c9646c8b4319ca7ca47010ecd233bc03fb0de41ee4a460943b68923a95cc6a4776e5b05ac1e7e3c963869e88b148ae0d2fbad WHIRLPOOL f1e02da4a4e067a0450327c4d9d2728ff09d468eb25c1455c7ef567e8e1f827b41a7f1f6aca8d1e8dd18ca732c457dc6ba5407f49ea690a1db26ae350f32bbeb
+EBUILD libusb-1.0.9-r2.ebuild 1405 SHA256 dc79e6731c5536859437601576498c2b30f1f609411ecabab55a7eb8250d7785 SHA512 249aa757774d86f15d5078e39e3d7a9702ffdaa774bba70f3c43c26aba1e5c062831846c940bc4f04aa329efb3bbe9d84d43b081c20bf56137b451a715b78a55 WHIRLPOOL e193a7899b227d0b16f7c1aa906bfc399a20fa7f978bbe6935a1af196fcb70cf0faf75bf1616c7c425c70c1dc4d066425efd6166c3f6204d0c2f6d32c91ec155
 EBUILD libusb-1.0.9.ebuild 1000 SHA256 7d016e63df50d581e270756222955f081cfedd5cc968256028897f7b09a56424 SHA512 2d86b3696800aaa0bee43c77d4548d72a4cf005db418acb3e73dfd6acbdaff7ae00d6a6b9ce193336476b2cc0ceb1ff7ddd443f6ab0aef5ea427c143361dd043 WHIRLPOOL 97ec162cfcd567f0b2511a9cec9147ad784f0fa39403e585e6b59dc75ac874708659ba3b66e56b461cdd2edb34be9980997612225f0325e0b0c91bfdcb0dda89
-MISC ChangeLog 20322 SHA256 988668ea2f96b45abf091e67925420239f096ae2f32ab5ca28b471c8f060d220 SHA512 f01cfb919e1f3c8f024dbfeee0e97c99151c07fa259f815da13572c4ed80f9db6f1f38763c955f9b68d6cf0e46ac94ee3f3ea3c0bce13aba186b38dcf31ed657 WHIRLPOOL 7a20791f93c4221fc297fc342818abf3edeac82117f581834461016ac1ea023cc2960061de7583d71802656b0acd06c6928ee14452df93a36d18abf357c15465
+MISC ChangeLog 20469 SHA256 40075020af91735164bd99a9841fd362dd85f7284bbbfdb43a61f93cefce5ed9 SHA512 96c10cb77ec00cbe929eb023321d854ed3e29beff76ded5c812ec0cd0348c93db390097cc8ebdab42fb6c07f5fe5f06ab32523acfc2824aef0aa6e056643b3b1 WHIRLPOOL 08e0d15206f03e60f72911f0bf23496b600e41f2332795baca60c6de367989d0f97a37d0c1867ffec4b3cc4c9c6e892f5a9c11e48721de760b96ac50cf25c057
 MISC metadata.xml 285 SHA256 8f3e4e1f792ef6a6f383ae0aac1627db7f536ff880da423bca1113cea6d06773 SHA512 10fc61b3654c9aee6e9ba9702cf6630928921d2670248b9e1356d417b205dabc959e3672eda071f5fa734b3a001992cecd514a920b6e37376db943266683e75d WHIRLPOOL e26de64dba56ea85587b9e7348a1be056f78a2e2f9f91ffb5faef242b7ced82496b40fe672b18c33491f40a124161ca47af0e80219ebe39a8b24e86557c36db1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJTItPnAAoJELp701BxlEWfH1IP/RzTgcvKihicP2EQwZ73GjOg
-J/i+hUq4BOW7c/LCrFZW2g4yY8sGpIul/SUxsJ0IW7Qm7uFLtF6Lta8x9fZ2NaaY
-tSiVTxI40EI2YIJpF6ja5wW01r8ldRzNMEWzTUz768UO/Gw5w1nnM+rai+4PT7X+
-a35V8rUbWb3nY9F/vaD1gZ487qHFgnZ4baGqgeuonJI11hDwbMiue9SxVR1O0dcx
-NYNapLNZ95XwqxWr/Yx08gXxaE/BhH3eyvS0sL0mgB3oIiQabwhnxWkwWhWqi0CW
-skZdssi10NwQRt+oEjanqSUgSAmmDjGUpTwlXoJG9KheonCViaBGH3Xcebnpog0e
-dRZbyIIYDPnEzLU7gK/GasUUw4Z/RQzMmgaGzfn2xiP8Kp3aZVfwSPJ0gtWbUNc9
-IXZPFfeis6JjxhjcOb9a2mHyAAOmjMVtDg0MWccI9TKvrspsL6vMZgOyl5GUUpev
-7hWcW4lgzAGwVcgLxHyAsg7K5/xFgPkSwCv9PXQS/N2RfOkdizB/t7yfi0AlTkuR
-bxBehk+CCqaphGjl2cg8Zwny7XRYDeE1IJCihw2PnX7JJynryIV34t8v2ZdbdtCO
-TlA2tigl2qevpFnRp9cUYtdkd8rXwpIlVslRM/yenbq1e1TmLn9lXRnKth2T4FB1
-ywTyLrkB9mIhYCVFyWOx
-=ahdG
+iQEcBAEBCAAGBQJTJKB6AAoJEEdUh39IaPFNgxkH/2e769xheBdly+BIduybmEbX
+eAeMEcLiXnjYT6Qy9MnjUfezwFtVBc3Y+uYbYOcnJWrG7HJm5DetpuoF4vfWA13Y
+KPoxagowTRqC02M4HP0s4mobsMiHH99hXGMohovGZgS7ORuD6IqMveE61/zuRzny
+v9KjG4YAVcPMpuzD+E+hhBp8bWS9UPzsm3/KgJzdBzvUmbJGkcouaoZA78txAyxB
+mUQRDCPG3juqeIFlQU/na6bfOynODLB/fdpr4VcoCq6oOox3s0/HS0T24xSthGaa
+xvR52oQRytNE0qdsZ9tVY7MnK7BXFDosiDqWARa3laEzHj/INaRuexyI3UQPsrg=
+=QXoY
 -----END PGP SIGNATURE-----
