@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libusb
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libusb/ChangeLog,v 1.158 2014/03/14 10:03:18 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libusb/ChangeLog,v 1.159 2014/03/15 18:52:24 ssuominen Exp $
+
+  15 Mar 2014; Samuli Suominen <ssuominen@gentoo.org> libusb-1.0.9-r2.ebuild:
+  Stabilize latest legacy 1.0.9 ebuild revision for everyone.
 
   14 Mar 2014; Agostino Sarubbo <ago@gentoo.org> libusb-1.0.18.ebuild:
   Stable for ppc64, wrt bug #503404
